<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="travel_theme_json">theme.json</string>
    <string name="travel_country_json">country.json</string>
    <string name="travel_tutorial_json">tutorial.json</string>

    <!--<string name="theme_empty">Please enter theme of travel.</string>-->
    <!--<string name="country_empty">Please enter country of travel.</string>-->

    <!--<string name="camera_permission">You have to allow camera access in Settings.</string>-->
    <!--<string name="storage_permission">You have to allow storage access in Settings.</string>-->
    <!--<string name="necessary_permission">You have to allow camera, storage access in Settings.</string>-->

    <!--<string name="err_pw_mismatch">Password Mismatch</string>-->
    <!--<string name="err_pw_same">Same Password</string>-->
    <!--<string name="err_email_format">It is not an email form</string>-->
    <!--<string name="err_password_num">최소 8자리를 입력해주세요.</string>-->
    <!--<string name="err_wrong_pw">Wrong Password</string>-->
    <!--<string name="err_email_not_found">User with the entered email doesn\'t exist</string>-->
    <!--<string name="err_exist_email">User with the entered email already exist</string>-->
    <!--<string name="err_delete_id">The deleted Email</string>-->
    <!--<string name="finish_of_msg">Please press back button one more time to exit the app</string>-->


    <string name="app_name">Viaggio</string>

    <string name="theme_empty">테마를 설정해주세요.</string>
    <string name="country_empty">도시를 선택해주세요.</string>
    <string name="camera_permission">카메라 접근권한이 필수입니다.</string>
    <string name="storage_permission">저장소 접근권한이 필수입니다.</string>
    <string name="necessary_permission">카메라, 저장소 접근권한이 필수입니다.</string>
    <string name="err_pw_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="err_pw_same">같은 비밀번호 입니다.</string>
    <string name="err_email_format">이메일 양식이 틀립니다.</string>
    <string name="err_password_num">최소 8자리를 입력해주세요.</string>
    <string name="err_wrong_pw">잘못된 비밀번호입니다.</string>
    <string name="err_email_not_found">존재하지 않는 사용자입니다.</string>
    <string name="err_exist_email">이미 존재하는 이메일입니다.</string>
    <string name="err_delete_id">삭제된 이메일입니다.</string>
    <string name="finish_of_msg">뒤로가기 버튼을 한번 더 누르시면 종료됩니다.</string>

    <string name="date_format">EE, MMM d, yyyy</string>
    <string name="date_time_format">HH:MM</string>
    <string name="over_image_count">+%d</string>
    <string name="travel_card_choose_count">%d</string>
    <string name="travel_of_day_country">%s_%s</string>
    <string name="format">%1$tY/%1$tm/%1$td</string>
    <string name="confirm">확인</string>

    <string name="tutorial_skip">건너뛰기</string>
    <string name="sign_in_sign">로그인 하기</string>
    <string name="google_login_contents">구글 로그인</string>
    <string name="tutorial_login">로그인</string>
    <string name="sign_in_email">이메일</string>
    <string name="sign_in_password">비밀번호</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_confirm_password">비밀번호 확인하기</string>
    <string name="setting_sign">로그인 해주세요.</string>
    <string name="setting_upload">자동 업로드</string>
    <string name="setting_sync">동기화</string>
    <string name="setting_password">비밀번호 변경</string>
    <string name="setting_my_profile">여행자 정보 등록</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_image">이미지 화질</string>
    <string name="setting_lock">암호 잠금</string>
    <string name="setting_lock_change">암호 변경</string>
    <string name="setting_lock_fingerprint">지문 인식</string>
    <string name="setting_app_version">앱 버전 정보</string>
    <string name="normal_sign">이메일로 로그인하기</string>
    <string name="sign_sign_up">회원가입</string>
    <string name="travel_count">DAY %d</string>
    <string name="travel_of_day_pattern">EEEE / MMMM d / yyyy</string>
    <string name="travel_of_day_time_pattern">h:mm a</string>
    <string name="non_travel_notice">터치하여\n새로운 여행을\n시작하세요!</string>
    <string name="travel_kind_notice">어떤 여행을 등록하시나요?</string>
    <string name="travel_overseas">✈ 해외 여행</string>
    <string name="travel_overseas_subtitle">세계 곳곳을 다니면서 행복한 여행의 기억을 남기세요!</string>
    <string name="travel_domestic">🇰🇷 국내 여행</string>
    <string name="travel_domestic_subtitle">외국 만큼 좋은 여행지가 많은 국내 여행을 남기세요!</string>
    <string name="travel_day_trip">⚡ 당일 치기 여행</string>
    <string name="travel_day_trip_subtitle">바쁜 일상에서 벗어나 당일치기 여행을 기억에 남기세요!</string>
    <string name="travel_before_overseas">다녀온 해외 여행</string>
    <string name="travel_before_overseas_subtitle">아쉬웠던 해외 여행의 추억을\n다시 생각 하면서 남기는 것이 어떨까요?</string>
    <string name="travel_before_domestic">다녀온 국내 여행</string>
    <string name="travel_before_domestic_subtitle">다시 한번 가보자!!\n국내 여행의 기억을 남기세요!</string>
    <string name="travel_start">여행 시작</string>
    <string name="theme_start">테마 선택</string>
    <string name="day_start">일차 선택</string>
    <string name="travel_card_start">등록</string>
    <string name="city_start">도시 선택</string>
    <string name="image_start">사진 선택</string>
    <string name="travel_enroll_notice">새로운 여행 등록</string>
    <string name="travel_card_enroll_notice">여행 포스팅 쓰기</string>
    <string name="travel_card_enroll_hint">여기를 터치해서 글을 작성하세요!\n일자를 구분해서 여행의 기억을\n남기실 수 있습니다.</string>
    <string name="travel_enroll_country">새로운 여행지</string>
    <string name="travel_enroll_country_hint">터치하여 여행지를 골라주세요.</string>
    <string name="travel_enroll_day">여행 시작날짜</string>
    <string name="travel_enroll_day_hint">터치하여 날짜를 골라주세요.</string>
    <string name="travel_enroll_theme">여행의 테마</string>
    <string name="travel_enroll_theme_hint">터치하여 테마를 골라주세요.</string>
    <string name="travel_country_notice">여행지</string>
    <string name="total">전체</string>
    <string name="total_image">모든 사진</string>
    <string name="travel_country_choice_notice">원하는 나라를 클릭 해주세요.</string>
    <string name="travel_country_add_notice">더 많은 도시가 추가될 예정이에요.</string>
    <string name="city_notice">여행 도시를\n선택을 해주세요.</string>
    <string name="theme_notice">여행 테마를\n선택을 해주세요.</string>
    <string name="travel_card_count">%d일차</string>
    <string name="travel_card_empty_notice">포스팅이 존재 하지 않습니다.\n포스팅을 작성해주세요. 🙏</string>
    <string name="traveling_city">여행중인 나라</string>
    <string name="traveling_theme">여행테마 (최대 3개)</string>
    <string name="travel_option">여행 설정</string>
    <string name="travel_title">여행 이름</string>
    <string name="travel_option_title">이름 변경</string>
    <string name="travel_option_country">도시 변경</string>
    <string name="travel_option_calendar">날짜 변경</string>
    <string name="travel_option_calendar_time">날짜/시간 변경</string>
    <string name="travel_option_theme">테마 변경</string>
    <string name="travel_option_image">대표 사진 변경</string>
    <string name="travel_option_finish">여행 종료</string>
    <string name="empty_hint">입력해 주세요.</string>
    <string name="empty_country_hint">최소 한개이상을 선택해 주세요.</string>
    <string name="travel_title_count">%d / 10자</string>
    <string name="travel_finish">여행을\n종료 하시겠습니까?</string>
    <string name="travel_delete">정말로\n삭제하시겠습니까?</string>
    <string name="finish_yes">네</string>
    <string name="finish_no">아니요</string>
    <string name="network_error">인터넷 연결을\n 확인해 주세요.</string>
    <string name="image_setting">화질</string>
    <string name="image_high">고화질</string>
    <string name="image_low">일반 화질</string>
    <string name="auto_upload_setting">업로드</string>
    <string name="auto_upload">자동 업로드</string>
    <string name="auto_upload_condition">자동 업로드(충전하고 있을 경우)</string>
    <string name="no_auto_upload">직접 업로드</string>
    <string name="profile_image">프로필 사진</string>
    <string name="profile_email">이메일</string>
    <string name="profile_name">이름</string>
    <string name="profile_save">저장</string>
    <string name="profile_password">비밀번호</string>
    <string name="profile_new_password">새로운 비밀번호</string>
    <string name="profile_new_password_confirm">새로운 비밀번호 확인</string>
    <string name="logout">로그아웃 하시겠습니까?</string>
    <string name="upload_check">동기화를\n검사하시겠습니까?</string>
    <string name="sync">동기화를\n시작하시겠습니까?</string>
    <string name="travel_card_image_modify">사진 수정</string>
    <string name="travel_card_modify">포스팅 수정</string>
    <string name="travel_card_theme_modify">테마 수정</string>
    <string name="travel_card_country_modify">장소 수정</string>
    <string name="travel_card_delete">삭제</string>
    <string name="travel_option_delete">여행 삭제</string>
    <string name="travel_option_instagram_share">인스타그램 공유하기</string>
    <string name="travel_card_close">종료</string>
    <string name="travel_card_image_count">%d / %d</string>
    <string name="calendar_save">등록</string>
    <string name="traveling_notice">👣 여행 중이예요!</string>
    <string name="travel_notice">💤 여행 준비 중이예요!</string>
    <string name="base_theme"># 여행</string>
    <string name="cancel">취소</string>
    <string name="lock_title">암호 입력</string>
    <string name="lock_subtitle">Viaggio 암호를 입력해 주세요.</string>
    <string name="lock_on">켜짐</string>
    <string name="lock_off">꺼짐</string>
    <string name="finger_print">지문 인식</string>
    <string name="finger_print_notice">지문 인식 센서에 지문을 인식해주세요.</string>
    <string name="pw_btn">암호 입력</string>
    <string name="traveling">여행 중 입니다.</string>
    <string name="theme_max">최대 3개 입니다.</string>
    <string name="sync_check_done">동기화가 완료되었습니다.</string>
    <string name="theme_add">원하는 테마가 없으시면 입력해주세요.</string>
    <string name="empty_image">사진이 존재하지 않습니다.😅</string>
    <string name="travel_card_image_modify_current">등록된 사진</string>
    <string name="travel_card_image_modify_new">새로운 사진</string>
    <string name="travel_card_image_modify_total_count">/ %d</string>
    <string name="travel_card_image_modify_fail">업로드 실패</string>
    <string name="travel_delete_fail">여행 삭제 실패. 다시 시도해주세요.</string>
    <string name="travel_delete_success">삭제가 완료되었습니다.</string>
    <string name="travel_instagram_not_install">인스타그램이 설치 되어 있지 않습니다.</string>
    <string name="travel_option_instagram_share_story">스토리</string>
    <string name="travel_option_instagram_share_feed">피드</string>
    <string name="travel_empty_data_btn">정보 가져오기</string>
    <string name="auto_complete_hint">검색어를 입력하세요.</string>
    <string name="travel_auto_selected">%s 선택되었습니다.</string>
    <string name="travel_no_end">미정</string>

    <string name="in_app_update_complete">업데이트 버전 다운로드 완료</string>
    <string name="in_app_update_fail">업데이트가 취소 되었습니다.</string>
    <string name="in_app_update_restart">설치/재시작</string>

    <string name="review">리뷰 남기기</string>
    <string name="review_next">다음에 남기기</string>
    <string name="review_contents">Viaggio가 마음에 드시나요??😍\n리뷰와✍ 평점⭐으로 알려주시면\n더욱 좋은 Viaggio로 보답하겠습니다.😎👍</string>

    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>
    <string name="clear">초기화</string>
    <string name="intro_contents">다녀온 여행\n기록을 한눈에!</string>
    <string name="intro_btn_contents">LET’S START TO LEARN</string>
</resources>
