<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <import type="com.kotlin.viaggio.view.traveling.TravelCardBottomSheetDialogFragment.ViewHandler"/>
        <import type="com.kotlin.viaggio.view.traveling.TravelCardBottomSheetDialogFragmentViewModel"/>

        <variable name="viewModel" type="TravelCardBottomSheetDialogFragmentViewModel"/>
        <variable name="viewHandler" type="ViewHandler"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_three"
            android:onClick="@{()->viewHandler.close()}"
    >

        <com.google.android.material.chip.Chip
                android:id="@id/travelOptionImageChange"
                style="@style/ViewStyle.Viaggio.Travel.Option"
                android:fontFamily="sans-serif-light"
                android:text="@string/travel_card_image_modify"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/common_margin"
                app:chipMinTouchTargetSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{()->viewHandler.imageModify()}"
        />

        <com.google.android.material.chip.Chip
                android:id="@id/travelOptionTitle"
                style="@style/ViewStyle.Viaggio.Travel.Option"
                android:fontFamily="sans-serif-light"
                android:text="@string/travel_card_modify"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/common_margin"
                app:chipMinTouchTargetSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelOptionImageChange"
                android:onClick="@{()->viewHandler.modify()}"
        />

        <com.google.android.material.chip.Chip
                android:id="@id/travelOptionAddCountry"
                style="@style/ViewStyle.Viaggio.Travel.Option"
                android:fontFamily="sans-serif-light"
                android:text="@string/travel_card_delete"
                app:chipMinTouchTargetSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelOptionTitle"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/common_margin"
                android:onClick="@{()->viewHandler.delete()}"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>