<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="com.kotlin.viaggio.view.setting.SettingFragment.ViewHandler"/>
        <import type="com.kotlin.viaggio.view.setting.SettingFragmentViewModel"/>

        <variable name="viewModel" type="SettingFragmentViewModel"/>
        <variable name="viewHandler" type="ViewHandler"/>
    </data>

    <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">
        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@color/white_three"
                android:id="@+id/setting_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <View
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="48.5dp"
                    app:layout_constraintTop_toTopOf="parent"
            />
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/tool_bar_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/toolbar"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar"
            />
            <View
                    android:id="@id/settingSign"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:background="@drawable/setting_bg"
                    android:layout_marginTop="@dimen/common_top"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:onClick="@{()->viewHandler.sign()}"
            />
            <TextView
                    android:text="@string/setting_sign"
                    style="@style/ViewStyle.Viaggio.Setting"
                    android:layout_marginTop="0dp"
                    app:layout_constraintStart_toStartOf="@id/settingSign"
                    app:layout_constraintTop_toTopOf="@id/settingSign"
                    app:layout_constraintBottom_toBottomOf="@id/settingSign"
                    />
            <View
                    android:id="@id/settingEtc"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/setting_bg"
                    android:layout_marginTop="@dimen/common_top"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    app:layout_constraintTop_toBottomOf="@id/settingSign"
                    app:layout_constraintBottom_toBottomOf="@id/settingLogout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@id/settingMyProfile"
                    android:text="@string/setting_my_profile"
                    style="@style/ViewStyle.Viaggio.Setting"
                    app:layout_constraintStart_toStartOf="@id/settingEtc"
                    app:layout_constraintTop_toTopOf="@id/settingEtc"
                    />
            <TextView
                    android:id="@id/settingAutoUpload"
                    android:text="@string/setting_upload"
                    style="@style/ViewStyle.Viaggio.Setting"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawableStart="@drawable/ic_cloud_upload"
                    app:layout_constraintStart_toStartOf="@id/settingEtc"
                    app:layout_constraintEnd_toEndOf="@id/settingEtc"
                    app:layout_constraintTop_toBottomOf="@id/settingMyProfile"
                    />
            <TextView
                    android:id="@id/settingAutoUploadCheck"
                    android:text="@string/setting_upload_check"
                    style="@style/ViewStyle.Viaggio.Setting"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawableStart="@drawable/ic_cloud_done"
                    app:layout_constraintStart_toStartOf="@id/settingEtc"
                    app:layout_constraintEnd_toEndOf="@id/settingEtc"
                    app:layout_constraintTop_toBottomOf="@id/settingAutoUpload"
                    />
            <TextView
                    android:id="@id/settingSync"
                    android:text="@string/setting_sync"
                    style="@style/ViewStyle.Viaggio.Setting"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawableStart="@drawable/ic_cloud_download"
                    app:layout_constraintStart_toStartOf="@id/settingEtc"
                    app:layout_constraintEnd_toEndOf="@id/settingEtc"
                    app:layout_constraintTop_toBottomOf="@id/settingAutoUploadCheck"
                    />
            <TextView
                    android:id="@id/settingLogout"
                    android:text="@string/setting_logout"
                    style="@style/ViewStyle.Viaggio.Setting"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawableStart="@drawable/ic_logout"
                    app:layout_constraintStart_toStartOf="@id/settingEtc"
                    app:layout_constraintEnd_toEndOf="@id/settingEtc"
                    app:layout_constraintTop_toBottomOf="@id/settingSync"
                    />
            <View
                    android:id="@id/settingEntire"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/setting_bg"
                    android:layout_marginTop="@dimen/common_top"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    app:layout_constraintTop_toBottomOf="@id/settingEtc"
                    app:layout_constraintBottom_toBottomOf="@id/settingAppVersion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@id/settingImage"
                    android:text="@string/setting_image"
                    style="@style/ViewStyle.Viaggio.Setting"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawableStart="@drawable/ic_photo"
                    app:layout_constraintStart_toStartOf="@id/settingEntire"
                    app:layout_constraintEnd_toEndOf="@id/settingEntire"
                    app:layout_constraintTop_toTopOf="@id/settingEntire"
                    />
            <TextView
                    android:id="@id/settingAppVersion"
                    android:text="@string/setting_app_version"
                    android:layout_marginBottom="5dp"
                    style="@style/ViewStyle.Viaggio.Setting"
                    app:layout_constraintStart_toStartOf="@id/settingEntire"
                    app:layout_constraintTop_toBottomOf="@id/settingImage"
                    />
            <TextView
                    style="@style/ViewStyle.Viaggio.Setting"
                    app:layout_constraintTop_toBottomOf="@id/settingImage"
                    app:layout_constraintEnd_toEndOf="@id/settingEntire"
                    tools:text="10.22.11614"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>