<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <import type="com.kotlin.viaggio.view.travel.kinds.TravelKindsBottomSheetDialogFragment.ViewHandler"/>
        <import type="com.kotlin.viaggio.view.travel.kinds.TravelKindsBottomSheetDialogFragmentViewModel"/>

        <variable name="viewModel" type="TravelKindsBottomSheetDialogFragmentViewModel"/>
        <variable name="viewHandler" type="ViewHandler"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/white"
    >
        <TextView
                android:id="@id/travelKinds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/travel_kind_notice"
                android:textSize="20.3dp"
                android:textColor="@color/charcoal_two"
                android:fontFamily="@font/noto_sanscjkkr_medium"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="7.7sp"
                android:layout_marginTop="30.7dp"
                android:layout_marginStart="21.3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage"/>
        <TextView
                android:id="@id/travelOverseasTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_overseas"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind"
                android:layout_marginStart="@dimen/travel_kind_margin"
                android:layout_marginTop="32.7dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelKinds"
        />
        <TextView
                android:id="@id/travelOverseasSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_overseas_subtitle"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind.Sub"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/travelOverseasTitle"
                app:layout_constraintStart_toStartOf="@id/travelOverseasTitle"/>
        <View
                android:id="@id/travelOverseasLgl"
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/ice_blue"
                android:layout_marginStart="@dimen/travel_kind_margin"
                android:layout_marginEnd="@dimen/travel_kind_margin"
                android:layout_marginTop="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelOverseasSubTitle"
        />
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick='@{()->viewHandler.selectedKinds("overseas")}'
                app:layout_constraintStart_toStartOf="@id/travelOverseasTitle"
                app:layout_constraintEnd_toEndOf="@id/travelOverseasStart"
                app:layout_constraintTop_toTopOf="@id/travelOverseasTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelOverseasSubTitle"
        />
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@id/travelOverseasStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/travel_kind_margin"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                app:layout_constraintTop_toTopOf="@id/travelOverseasTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelOverseasSubTitle"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:id="@id/travelDomesticTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_domestic"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind"
                android:layout_marginTop="12.7dp"
                android:layout_marginStart="@dimen/travel_kind_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelOverseasLgl"
                app:layout_constraintVertical_chainStyle="packed"
        />
        <TextView
                android:id="@id/travelDomesticSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_domestic_subtitle"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind.Sub"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/travelDomesticTitle"
                app:layout_constraintStart_toStartOf="@id/travelDomesticTitle"
        />
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@id/travelDomesticStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/travel_kind_margin"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                app:layout_constraintTop_toTopOf="@id/travelDomesticTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelDomesticSubTitle"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick='@{()->viewHandler.selectedKinds("domestic")}'
                app:layout_constraintStart_toStartOf="@id/travelDomesticTitle"
                app:layout_constraintEnd_toEndOf="@id/travelDomesticStart"
                app:layout_constraintTop_toTopOf="@id/travelDomesticTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelDomesticSubTitle"
        />
        <View
                android:id="@id/travelDomesticLgl"
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/ice_blue"
                android:layout_marginTop="13dp"
                android:layout_marginStart="@dimen/travel_kind_margin"
                android:layout_marginEnd="@dimen/travel_kind_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelDomesticSubTitle"
        />

        <TextView
                android:id="@id/travelBeforeOverseasTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_before_overseas"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind"
                android:layout_marginTop="12.7dp"
                android:layout_marginStart="@dimen/travel_kind_margin"
                app:layout_constraintTop_toBottomOf="@id/travelDomesticLgl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
        />
        <TextView
                android:id="@id/travelBeforeOverseasSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_before_overseas_subtitle"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind.Sub"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/travelBeforeOverseasTitle"
                app:layout_constraintTop_toBottomOf="@id/travelBeforeOverseasTitle"
        />
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@id/travelBeforeOverseasStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/travel_kind_margin"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/travelBeforeOverseasTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelBeforeOverseasSubTitle"
        />

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick='@{()->viewHandler.selectBeforeKinds("overseas")}'
                app:layout_constraintStart_toStartOf="@id/travelBeforeOverseasTitle"
                app:layout_constraintEnd_toEndOf="@id/travelBeforeOverseasStart"
                app:layout_constraintTop_toTopOf="@id/travelBeforeOverseasTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelBeforeOverseasSubTitle"
        />
        <View
                android:id="@id/travelBeforeOverseasLgl"
                android:layout_width="0dp"
                android:layout_height="0.3dp"
                android:background="@color/ice_blue"
                android:layout_marginTop="13dp"
                android:layout_marginStart="@dimen/travel_kind_margin"
                android:layout_marginEnd="@dimen/travel_kind_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelBeforeOverseasSubTitle"
        />
        <TextView
                android:id="@id/travelBeforeDomesticTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_before_domestic"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind"
                android:layout_marginStart="@dimen/travel_kind_margin"
                android:layout_marginTop="12.7dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelBeforeOverseasLgl"
        />
        <TextView
                android:id="@id/travelBeforeDomesticSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_before_domestic_subtitle"
                android:textAppearance="@style/TextAppearance.Viaggio.Travel.Kind.Sub"
                app:layout_constraintTop_toBottomOf="@id/travelBeforeDomesticTitle"
                app:layout_constraintStart_toStartOf="@id/travelBeforeDomesticTitle"
        />
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@id/travelBeforeDomesticStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/travel_kind_margin"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                app:layout_constraintTop_toTopOf="@id/travelBeforeDomesticTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelBeforeDomesticSubTitle"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick='@{()->viewHandler.selectBeforeKinds("domestic")}'
                app:layout_constraintStart_toStartOf="@id/travelBeforeDomesticTitle"
                app:layout_constraintEnd_toEndOf="@id/travelBeforeDomesticStart"
                app:layout_constraintTop_toTopOf="@id/travelBeforeDomesticTitle"
                app:layout_constraintBottom_toBottomOf="@id/travelBeforeDomesticSubTitle"
        />
        <View
                android:id="@+id/bgl"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                app:layout_constraintTop_toBottomOf="@id/travelBeforeDomesticSubTitle"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>